--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -187,3 +187,17 @@ table {
 .btn i {
   transition: all .15s;
 }
+
+.vaiyo-icon {
+  background: asset_url("favicon.png");
+  height: 20px;
+  width: 20px;
+  /* display: block; */
+  /* Other styles here */
+}
+
+.wallet-button-image {
+  height: 40px;
+  width: 40px;
+  display: inline-block;
+}
