--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -19,8 +19,8 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-.user-role-tag {
-  color: white !important;
+.user-role-tag{
+    color: white !important;
 }
 
 .shared-user {
@@ -73,7 +73,7 @@
   z-index: 1;
   box-shadow: 0 0 0 rgba(0, 0, 0, 0) !important;
 }
-textarea:focus,
+.vaiyo-form textarea:focus,
 input:focus {
   outline: none !important;
   box-shadow: 0 0 0 rgba(0, 0, 0, 0) !important;
