--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -39,6 +39,11 @@
             <% end %>
           <% end %>
 
+          <% get_vaiyotokens_page = params[:controller] == "users" && params[:action] == "getvaiyotokens" ? "active" : "" %>
+          <%= link_to get_vaiyotokens_path(current_user), class: "px-3 mx-1 mt-1 header-nav #{get_vaiyotokens_page}" do %>
+            <i class="fas vaiyo-icon pr-1"></i><span class="d-none d-sm-inline-block"><%= t("header.get_VaiyoTokens") %></span>
+          <% end %>
+
           <div class="dropdown">
             <a href="#" class="nav-link pr-0" data-toggle="dropdown">
               <% if current_user.image.blank? || !valid_url?(current_user.image) %>
@@ -89,12 +94,6 @@
               <% end %>
             </div>
           </div>
-
-          <% get_vaiyotokens_page = params[:controller] == "users" && params[:action] == "getvaiyotokens" ? "active" : "" %>
-          <%= link_to get_vaiyotokens_path(current_user), class: "px-3 mx-1 mt-1 header-nav #{get_vaiyotokens_page}" do %>
-            <span class="d-none d-sm-inline-block"><%= t("header.get_VaiyoTokens") %></span>
-          <% end %>
-
         <% elsif show_signin %>
           <% allow_greenlight_accounts = allow_greenlight_accounts? %>
           <% if allow_greenlight_accounts %>
