--- a/app/views/users/components/_menu_buttons.html.erb
+++ b/app/views/users/components/_menu_buttons.html.erb
@@ -17,9 +17,11 @@
   <%= link_to edit_user_path, class: "list-group-item list-group-item-action dropdown-item #{"active" if active_page == "edit"}" do %>
     <span class="icon mr-3"><i class="fas fa-user"></i></span><%= t("settings.account.title") %>
   <% end %>
-  <% if current_user.greenlight_account? %>
-    <%= link_to change_password_path, class: "list-group-item list-group-item-action dropdown-item #{"active" if active_page == "change_password"}" do %>
-      <span class="icon mr-3"><i class="fas fa-key"></i></span><%= t("settings.password.title") %>
+  <% if false %>
+    <% if current_user.greenlight_account? %>
+      <%= link_to change_password_path, class: "list-group-item list-group-item-action dropdown-item #{"active" if active_page == "change_password"}" do %>
+        <span class="icon mr-3"><i class="fas fa-key"></i></span><%= t("settings.password.title") %>
+      <% end %>
     <% end %>
   <% end %>
   <%= link_to delete_account_path, class: "list-group-item list-group-item-action dropdown-item #{"active" if active_page == "delete_account"}" do %>
