--- a/app/views/users/getvaiyotokens.html.erb
+++ b/app/views/users/getvaiyotokens.html.erb
@@ -28,12 +28,12 @@
         	<p class="text-right balance-font" id="balance"></p>
             <div class="d-flex">
               <input type="text" id="amountinput" onkeypress="return /[0-9.]/i.test(event.key)" class="flex-fill normal-font vaiyo-input" placeholder="0.0" />
-              <a class="flex-fill text-center normal-font pt-2 pr-3">MAX</a>
+              <a class="flex-fill text-center normal-font pt-2 pr-3" id="balancemax" onclick="onbtnMax()">MAX</a>
               <%= image_tag(asset_url('bnb.png'), class: "bnb-icon flex-fill", alt:"") %>
               <div class="flex-fill text-center normal-font pt-2 pl-2">BNB</div>
             </div>
         </div>
-        <button class="btn btn-primary w-100">Supply</button>
+        <button class="btn btn-primary w-100" onclick="depositBNB()">Supply</button>
       </div>
     </div>
   </div>
