--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -190,8 +190,10 @@ table {
 
 .vaiyo-icon {
   background: asset_url("favicon.png");
-  height: 20px;
-  width: 20px;
+  height: 15px;
+  width: 15px;
+  display: inline-block;
+  margin-right: 5px;
   /* display: block; */
   /* Other styles here */
 }
