--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -72,6 +72,9 @@
   outline: none !important;
   z-index: 1;
   box-shadow: 0 0 0 rgba(0, 0, 0, 0) !important;
+  margin-right: 25px;
+  padding-right: 10px;
+  padding-left: 10px;
 }
 .vaiyo-form textarea:focus,
 input:focus {
