--- a/app/assets/javascripts/getVaiyoTokens.js.erb
+++ b/app/assets/javascripts/getVaiyoTokens.js.erb
@@ -7,5 +7,8 @@ $(document).on("turbolinks:load", async function () {
     getBalance(user.waddress).then((e) => {
       document.getElementById("balance").innerHTML = "Balance: " + e;
     });
+    document.getElementById("crypto-name").innerHTML = "BNB";
+    document.getElementById("supplybtn").innerHTML = "Supply";
+    document.getElementById("supplybtn").disabled = false;
   }
 });
