--- a/app/assets/javascripts/wallet.js.erb
+++ b/app/assets/javascripts/wallet.js.erb
@@ -22,6 +22,13 @@ function post(path, params, method = "post") {
   form.submit();
 }
 
+function togleOtherWallet() {
+  const otherbtn = document.getElementById("otherwallet");
+  if (otherbtn.innerHTML == "keyboard_arrow_right")
+    otherbtn.innerHTML = "keyboard_arrow_down";
+  else otherbtn.innerHTML = "keyboard_arrow_right";
+}
+
 async function signinWithWallet() {
   connectWithWallet(currentWallet, "signin");
 }
@@ -42,7 +49,27 @@ async function setWallet(wallettype) {
     // code block
   }
 }
-
+async function changeNetwork() {
+  if (typeof window.ethereum !== "undefined") { 
+    if(window.ethereum.chainId != 0x38) {
+      const user = $("#mycontainer").data("source");
+      return window.ethereum.request({
+        method: "wallet_switchEthereumChain",
+        params: [{ chainId: "0x38" }]
+      })
+      .then((e) => {
+        getBalance(user.waddress)
+        .then((balance) => {
+          document.getElementById("balance").innerHTML = "Balance: " + balance;
+        })
+        .catch(console.log);
+      })
+      .catch((e) => {
+        console.log(e);
+      });
+    }   
+  }
+}
 async function connectWithWallet(wallettype, where) {
   switch (wallettype) {
     case "metamask":
